Iteration D2: Connecting Products to Carts

--- a/app/views/store/index.html.slim
+++ b/app/views/store/index.html.slim
@@ -4,10 +4,12 @@ div.w-full
   h1.font-bold.text-xl.mb-6.pb-2.border-b-2
     | Your Pragmatic Catalog
   ul
-    - @products.each do |product|
-      li.flex.mb-6
-        = image_tag(product.image_url, class: 'object-contain w-40 h-48 shadow mr-6')
-        div
-          h2.font-bold.text-lg.mb-3 = product.title
-          p = sanitize(product.description)
-          div.mt-3 = number_to_currency product.price
+    - cache @products do
+      - @products.each do |product|
+        - cache @products do
+          li.flex.mb-6
+            = image_tag(product.image_url, class: 'object-contain w-40 h-48 shadow mr-6')
+            div
+              h2.font-bold.text-lg.mb-3 = product.title
+              p = sanitize(product.description)
+              div.mt-3 = number_to_currency product.price
