--- a/app/views/carts/_cart.html.slim
+++ b/app/views/carts/_cart.html.slim
@@ -1,9 +1,14 @@
 div id="#{dom_id(cart)}"
-  h2.font-bold.text-lg.mb-3 Your Pragmatic Cart
-  ul.list-none.list-inside
-    - cart.line_items.each do |item|
-      li = "#{item.quantity} × #{item.product.title}"
-  - if action_name != "show"
-    = link_to "Show this cart", cart, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium"
-    = link_to 'Edit this cart', edit_cart_path(cart), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium"
-    hr.mt-6
+  h2.font-bold.text-lg.mb-3 Your Cart
+  table.table-auto
+    - cart.line_items.each do |line_item|
+      tr
+        td.text-right = line_item.quantity
+        td ×
+        td.pr-2 = line_item.product.title
+        td.text-right.font-bold = number_to_currency(line_item.total_price)
+    tfoot
+      tr
+        th.text-right.pr-2.pt-2 colspan="3" Total:
+        td.text-right.pt-2.font-bold.border-t-2.border-black = number_to_currency(cart.total_price)
+  = button_to 'Empty Cart', cart, method: :delete, class: 'ml-4 rounded-lg py-1 px-2 text-white bg-green-600'
